# fortran-amedas

./: CMakeLists.txt  README.md  makefile
app/: .syncthing.main.f90.tmp  CMakeLists.txt  cli_mo.f90  main.f90  makefile
data/: kansho_all.csv  kansho_tepco.csv
data/international/: countryarea.csv  region.csv  station_jp.csv
include/: macro.fi
install/: fortran-amedas.service  fortran-amedas.timer  makefile
src/: amedas_mo.f90  make_weather_db_mo.f90  makefile
test/: CMakeLists.txt
